Fix logo download layout on small screens.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -572,7 +572,6 @@ p pre code, li pre code {
     padding: 20px;
     height: 75px;
     float:left;
-    clear: left;
     margin: 0 20px 0px 0;
     background-image: linear-gradient(45deg, #ddd 25%, transparent 25%), linear-gradient(-45deg, #ddd 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #ddd 75%), linear-gradient(-45deg, transparent 75%, #ddd 75%);
     background-size: 12px 12px;
@@ -586,7 +585,7 @@ p pre code, li pre code {
 #logos div:after { clear: both; }
 
 @media only screen and (max-width: 550px) {
-    #logos .logo img { width: 100%; }
+    #logos .logo img { width: 100%; float: none; padding: 20px 0; }
 }
 
 #logos img.light {
